# senaps-dockerbuilder

./: .gitignore  README.md  pyproject.toml
examples/get_stream/: entry.py  manifest.json
examples/simple/: entry.py  manifest.json
scripts/: get_stream.py  run_example.py
src/eratos_docker/: build.py  mock_analysis.py  run.py  utils.py
