
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
  "docker",
  "colorama==0.4.6",
  "typer"
]
name = "eratos-docker"
authors = [{ name = "Steven Nguyen", email = "steven.nguyen@eratos.com" }]
description = ""
requires-python = ">= 3.10"
dynamic = ["version"]

[project.scripts]
senaps-dockerbuild = "eratos_docker.build:app"

[tool.hatch.build.targets.wheel]
packages = ["src/eratos_docker"]


[tool.hatch.version]
path = "src/eratos_docker/__init__.py"
